GPC/tests/examples/fail/wrongPointers6.gpc


void GPRM::Test::wrongPointers6(int *e, char *f) {

    bool b = e == f;

}
